# vinted-scraper

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: discord.rs  main.rs  scraper.rs
