[package]
name = "vinted-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
scraper = "0.25.0"
dotenvy = "0.15"
anyhow = "1.0.102"
mimalloc = "0.1.43"
aho-corasick = "1.1"

[profile.release]
opt-level = 'z' 
lto = true 
codegen-units = 1
panic = 'abort' 
strip = true 
